# opinion-report-engine

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: 02-report-spec.md  README.md  api-contract.md  architecture.md  current-state.md  design-decisions.md  final-framework.zh-CN.md  framework-audit.md  open-questions.md  requirements-traceability.md
docs/source/: 2026-07-11-舆情报告生成模块 — 开发任务书.md
examples/: report-config.all-sections.en.json  report-config.csuite.json  report-config.m1-slices.json  report-config.metrics.json  report-config.pr.json  report-config.recommendations.json  report-config.verdict-metrics.json
fixtures/: README.md  docker-compose.yml
fixtures/init/: 001_schema.sql  002_seed.sql
n8n/: README.md  report-generation-orchestrator.json
src/report_engine/: __init__.py  cli.py  config.py  presentation.py  runtime.py  settings.py
tests/: test_api.py  test_api_runtime.py  test_application_service.py  test_benchmark.py  test_benchmark_chart.py  test_benchmark_runner.py  test_biz_impact.py  test_biz_impact_runner.py  test_bundle_publisher.py  test_catalog_publisher.py  test_chart_localization.py  test_cli_configuration.py  test_config.py  test_default_configs.py  test_engagement.py  test_engagement_chart.py  test_engagement_runner.py  test_facts.py  test_job_manager.py  test_job_store.py  test_keywords.py  test_keywords_chart.py  test_keywords_runner.py  test_media_social.py  test_media_social_chart.py  test_media_social_runner.py  test_metrics.py  test_metrics_chart.py  test_metrics_runner.py  test_n8n_workflow.py  test_negative_themes.py  test_negative_themes_chart.py  test_negative_themes_runner.py  test_openai_compatible_narrator.py  test_pdf_renderer.py  test_planner.py  test_platforms.py  test_platforms_chart.py  test_platforms_runner.py  test_presentation.py  (+32 more)
tests/integration/: __init__.py  test_api_postgres.py  test_benchmark_postgres.py  test_biz_impact_postgres.py  test_cli.py  test_engagement_postgres.py  test_keywords_postgres.py  test_m2_acceptance.py  (+16 more)
(+107 files in other folders)
