[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "opinion-report-engine"
version = "0.1.0"
description = "Configuration-driven public-opinion report generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/report_engine"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
